# Fernsicht

./: .gitignore  BRIDGE_PROTOCOL.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROTOCOL.md  README.md  SECURITY.md  test_local.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: brew-scoop-pr.yml  bridge-release.yml  ci.yml  cli-docker.yml  cli-release.yml  pages.yml  python-release.yml  release-alert.yml  supply-chain.yml
bridge/: Makefile  README.md  RELEASE.md  go.mod
bridge/cmd/fernsicht-bridge/: main.go  signals_unix.go  signals_windows.go
bridge/internal/bridge/: bridge.go  bridge_test.go  dispatcher.go
bridge/internal/peer/: peer.go  peer_test.go
bridge/internal/proto/: proto.go  proto_test.go
bridge/internal/transport/: transport.go  transport_test.go
bridge/internal/wire/: wire.go  wire_test.go
bridge/pkg/embed/: embed.go  embed_test.go
bridge/test/integration/: endtoend_test.go  fake_server.go
cli/: Dockerfile  Makefile  README.md  RELEASE.md  go.mod  go.sum  install.ps1  install.sh
cli/cmd/fernsicht/: completion.go  doctor.go  magic.go  main.go  run.go  update.go  url.go
cli/dist-templates/: README.md  fernsicht.json.tmpl  fernsicht.rb.tmpl
cli/docs/: cli.md  config.md  examples.md  magic-prefix.md  troubleshooting.md
cli/examples/bash-pipeline/: README.md  pipeline.sh
cli/examples/docker-build/: README.md
cli/examples/pytest/: README.md  conftest.py
cli/examples/snakemake/: .fernsicht.toml  README.md
cli/internal/cfg/: file.go  file_test.go  firstrun.go  firstrun_test.go
cli/internal/clipboard/: clipboard.go  clipboard_test.go
cli/internal/doctor/: doctor.go  doctor_test.go
cli/internal/errcatalog/: catalog.go  catalog_test.go
cli/internal/output/: json.go
cli/internal/parse/: ansi.go  ansi_test.go  bench_test.go  confidence.go  confidence_test.go  counter.go  custom.go  custom_test.go  linebuf.go  magic.go  (+8 more)
frontend/: .env.example  app.html  index.html  install.html  package-lock.json  package.json  tsconfig.json  viewer.html  vite.config.ts
frontend/public/: CNAME
frontend/src/: crypto.js  main.js  main.ts  mqtt.js  peer.js  peer.ts  protocol.js  protocol.ts  signaling.js  signaling.ts  style.css  ui.js  ui.ts
publishers/python/: CHANGELOG.md  README.md  pyproject.toml
publishers/python/src/fernsicht/: __init__.py  _blick.py  _crypto.py  _protocol.py  _room.py  _session.py  _transport.py  _url.py  _wire.py
publishers/python/tests/: test_blick.py  test_crypto.py  test_protocol.py  test_room.py  test_session.py  test_wire.py
publishers/r/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.md
(+73 files in other folders)
