[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fernsicht"
version = "0.1.2"
description = "Remote progress bar tracking — wrap your loop, watch from anywhere"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.9"
authors = [{ name = "Fernsicht Contributors" }]
keywords = ["progress", "remote", "webrtc", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "aiortc>=1.14.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://app.fernsicht.space"
Repository = "https://github.com/MuteJester/fernsicht"
Issues = "https://github.com/MuteJester/fernsicht/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fernsicht"]

[tool.ruff]
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
